# samples-python

./: pyproject.toml
bedrock/shared/: activities.py
crewai_plugin/: README.md  __init__.py
crewai_plugin/basic/: README.md  __init__.py  run_hello_world_workflow.py  run_research_workflow.py  run_worker.py
crewai_plugin/human_approval/: README.md  __init__.py  run_approval_workflow.py  run_worker.py  send_approval.py
crewai_plugin/memory/: README.md  __init__.py  run_memory_workflow.py  run_worker.py
crewai_plugin/tool_config/: README.md  __init__.py  run_config_workflow.py  run_worker.py
custom_decorator/: activity_utils.py
langchain/: activities.py  langchain_interceptor.py  worker.py
langchain_contrib/: pydantic_plus_converter.py
langchain_contrib/langgraph_contrib/: chatbot.py  chatbot_activity.py  chatbot_graph_workflow.py  chatbot_starter.py  chatbot_workflow.py  graph_chatbot_starter.py  worker.py
large_payload/: _activity.py  _impl.py  _workflow.py  activity.py  interceptor.py  large_payload_ref.py  reference.py  store.py  workflow.py
nexus_openai_agents/: create_nexus_endpoint.sh  endpoint_description.md  get_weather_service.py  get_weather_service_handler.py  get_weather_workflow.py  register_weather_service_endpoint.sh  run_tools_agent_workflow.py  run_tools_workflow.py  run_tools_workflow_worker.py  run_weather_service_worker.py  tools_workflow.py  weather_service_handler.py
openai_agents/: README.md  __init__.py  customer_service_client.py  run_agents_as_tools_workflow.py  run_hello_world_workflow.py  run_research_workflow.py  run_tools_workflow.py  run_worker.py
openai_agents/adapters/: _heartbeat_decorator.py  _open_ai_converter.py  _openai_runner.py  _temporal_model_stub.py  _temporal_trace_provider.py  activity_model.py  invoke_model_activity.py  open_ai_data_converter.py  temporal_model_provider.py  temporal_openai_agents.py  temporal_tools.py  trace_interceptor.py
openai_agents/workflows/: agents_as_tools_workflow.py  customer_service_workflow.py  tools_workflow.py  (+2 more)
pydantic_ai_temporal/: pydantic_model_workflow.py  pydantic_temporal_model.py  run_pydantic_model.py
pydanticai/: invoke_pydantic_model_activity.py  pydantic_model_workflow.py  pydantic_temporal_model.py  run_pydantic_model.py
(+23 files in other folders)
